test/valid/DoubleSet/TestFloor.plume
/**
 * 
 * Testa o metodo floor da class Double
 *
 * @author 37029, Juliana Franco
 *
 */
class TestFloor extends Object is

	method main : () -> String is
		new Double(111,222).floor().toString()